# FeederAPI

./: README.md  app.py  pyproject.toml
Characters/: __init__.py  characters.py
FeederAPI/Characters/: characters.py
webapp/: app.py
