[tool.poetry]
name = "feederapi"
version = "0.1.0"
description = ""
authors = ["Tblkva <andreichudnovets@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
aiohttp = "^3.9.3"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
